- pywii est configurable par le fichier config.ini - dry du code the python way :) - implementation d'une fonction de status de la wiimote permettant de voir son etat (batterie et tout)

--- a/config.ini
+++ b/config.ini
@@ -6,11 +6,27 @@ SOCK_TIMEOUT_DURATION : 0.1
 
 
 [button_action]
+BUTTON_ACTION_LEFT : xmms --rew
+BUTTON_ACTION_RIGHT: xmms --fwd
+BUTTON_ACTION_UP : true
+BUTTON_ACTION_DOWN : true
+BUTTON_ACTION_PLUS : amixer set PCM 2dB+
+BUTTON_ACTION_MINUS : amixer set PCM 2dB-
+BUTTON_ACTION_A : xmms --play-pause
+BUTTON_ACTION_B : sudo acpitool -s
 
 
 [accel_config]
-ACCELEROMETER_ZERO : 0x80 # ie. gravity acceleration
-ACCELEROMETER_PRECISION : 0x20 # experimental value
+; 0x80 ie. gravity acceleration
+ACCELEROMETER_ZERO : 128
+; 0x20 : empirical value
+ACCELEROMETER_PRECISION : 32 
 
 
 [accel_action]
+ACCEL_X_LEFT_ACTION  : true
+ACCEL_X_RIGHT_ACTION : true
+ACCEL_Y_UP_ACTION    : true
+ACCEL_Y_DOWN_ACTION  : true
+ACCEL_Z_FRONT_ACTION : true
+ACCEL_Z_BACK_ACTION  : true
