bugfix: les frames inf. a 2 octets ne sont pas traitees

--- a/config.ini
+++ b/config.ini
@@ -6,20 +6,20 @@ SOCK_TIMEOUT_DURATION : 0.1
 
 
 [button_action]
-BUTTON_ACTION_LEFT : xmms --rew
-BUTTON_ACTION_RIGHT: xmms --fwd
-BUTTON_ACTION_UP : true
-BUTTON_ACTION_DOWN : true
-BUTTON_ACTION_PLUS : amixer set PCM 2dB+
+BUTTON_ACTION_LEFT  : xmms --rew
+BUTTON_ACTION_RIGHT : xmms --fwd
+BUTTON_ACTION_UP    : true
+BUTTON_ACTION_DOWN  : true
+BUTTON_ACTION_PLUS  : amixer set PCM 2dB+
 BUTTON_ACTION_MINUS : amixer set PCM 2dB-
-BUTTON_ACTION_A : xmms --play-pause
-BUTTON_ACTION_B : sudo acpitool -s
+BUTTON_ACTION_A     : xmms --play-pause
+BUTTON_ACTION_B     : true
 
 
 [accel_config]
-; 0x80 ie. gravity acceleration
+# 0x80 ie. gravity acceleration
 ACCELEROMETER_ZERO : 128
-; 0x20 : empirical value
+# 0x20 : empirical value
 ACCELEROMETER_PRECISION : 32 
 
 
