ajout de la class Daemon

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,12 @@
 [main]
 DEBUG : True
+# CRITICAL	50
+# ERROR		40
+# WARNING	30
+# INFO		20
+# DEBUG		10
+# NOTSET	0
+DEBUG_LEVEL : 10
 DISCOVER_DURATION : 5
 SLEEP_DURATION : 5
 SOCK_TIMEOUT_DURATION : 0.1
