--- a/config.ini
+++ b/config.ini
@@ -6,11 +6,11 @@ DEBUG : True
 # INFO		20
 # DEBUG		10
 # NOTSET	0
-DEBUG_LEVEL : 10
+DEBUG_LEVEL : 0
 DISCOVER_DURATION : 5
 SLEEP_DURATION : 5
 SOCK_TIMEOUT_DURATION : 0.1
-
+DAEMONIZE: False
 
 [button_action]
 BUTTON_ACTION_LEFT  : xmms --rew
