factorisation du rumble

--- a/config.ini
+++ b/config.ini
@@ -20,7 +20,7 @@ BUTTON_ACTION_DOWN  : true
 BUTTON_ACTION_PLUS  : amixer set PCM 2dB+
 BUTTON_ACTION_MINUS : amixer set PCM 2dB-
 BUTTON_ACTION_A     : xmms --play-pause
-BUTTON_ACTION_B     : true
+BUTTON_ACTION_B     : xmms --stop
 
 
 [accel_config]
