ajout d'un hook pour effectuer pour une action systeme apres la deconnexion de la wiimote (typiquement goto ram )

--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,10 @@ SLEEP_DURATION : 5
 SOCK_TIMEOUT_DURATION : 0.1
 DAEMONIZE: False
 
+# ON_EXIT_HOOK : 
+ON_EXIT_HOOK : "/home/chris/bin/s2ram.sh"
+
+
 [button_action]
 BUTTON_ACTION_LEFT  : xmms --rew
 BUTTON_ACTION_RIGHT : xmms --fwd
