--- a/config.ini
+++ b/config.ini
@@ -12,8 +12,8 @@ SLEEP_DURATION : 5
 SOCK_TIMEOUT_DURATION : 0.1
 DAEMONIZE: False
 
-# ON_EXIT_HOOK : 
-ON_EXIT_HOOK : "/home/chris/bin/s2ram.sh"
+ON_EXIT_HOOK : true
+# ON_EXIT_HOOK : "/home/chris/bin/s2ram.sh"
 
 
 [button_action]
